# process-service-api/src/main/java/com/yeshenko/processserviceapi/controller/v1/ProcessServiceApiDelegateImpl.java
@@ -1,12 +1,7 @@
 package com.yeshenko.processserviceapi.controller.v1;
 
 import com.yeshenko.processserviceapi.api.v1.ProcessApiDelegate;
-import com.yeshenko.processserviceapi.models.v1.BuildProcessRequestDto;
-import com.yeshenko.processserviceapi.models.v1.CreateProcess200ResponseDto;
-import com.yeshenko.processserviceapi.models.v1.CreateProcessRequestDto;
-import com.yeshenko.processserviceapi.models.v1.ProcessEntityDto;
-import com.yeshenko.processserviceapi.models.v1.ProcessEntityListResponseInnerDto;
-import com.yeshenko.processserviceapi.models.v1.TaskCompleteDto;
+import com.yeshenko.processserviceapi.models.v1.*;
 import com.yeshenko.processserviceapi.service.process.ProcessEntityService;
 import java.util.List;
 import java.util.UUID;
@@ -26,14 +21,14 @@ public class ProcessServiceApiDelegateImpl implements ProcessApiDelegate {
   }
 
   @Override
-  public ResponseEntity<CreateProcess200ResponseDto> createProcess(CreateProcessRequestDto createProcessRequestDto) {
-    return ResponseEntity.ok(new CreateProcess200ResponseDto().processInstanceId(processEntityService
-        .createProcess(createProcessRequestDto.getProcessDefinitionId())));
+  public ResponseEntity<UUID> createProcess(CreateProcessRequestDto createProcessRequestDto) {
+    return ResponseEntity.ok(processEntityService
+            .createProcess(createProcessRequestDto.getProcessDefinitionId()));
   }
 
   @Override
-  public ResponseEntity<ProcessEntityDto> getProcess(UUID processId, UUID processDefinitionId) {
-    return ResponseEntity.ok(processEntityService.getProcess(processId, processDefinitionId));
+  public ResponseEntity<ProcessEntityDto> getProcess(UUID processId, UUID processInstanceId) {
+    return ResponseEntity.ok(processEntityService.getProcess(processId, processInstanceId));
   }
 
   @Override
@@ -50,5 +45,15 @@ public class ProcessServiceApiDelegateImpl implements ProcessApiDelegate {
   @Override
   public ResponseEntity<List<ProcessEntityListResponseInnerDto>> fetchProcessList() {
     return ResponseEntity.ok(processEntityService.fetchProcessEntityList());
+  }
+
+  @Override
+  public ResponseEntity<List<ProcessDefinitionResponseInnerDto>> fetchDefinitions() {
+    return ResponseEntity.ok(processEntityService.getProcessDefinitionList());
+  }
+
+  @Override
+  public ResponseEntity<TaskDto> getTask(UUID taskId) {
+    return ResponseEntity.ok(processEntityService.getTask(taskId));
   }
 }
